@@ -1,27 +1,33 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.fluidpressureandflow.common.view;
 
+import java.awt.BasicStroke;
+import java.awt.Color;
 import java.awt.geom.Point2D;
 import java.text.DecimalFormat;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableRectangle2D;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.util.Option;
+import edu.colorado.phet.common.phetcommon.util.Option.Some;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.Function0;
 import edu.colorado.phet.common.phetcommon.util.function.Function1;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
+import edu.colorado.phet.common.phetcommon.view.util.RectangleUtils;
 import edu.colorado.phet.common.piccolophet.event.RelativeDragHandler;
-import edu.colorado.phet.common.piccolophet.nodes.ThreeImageNode;
+import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
+import edu.colorado.phet.common.piccolophet.nodes.PointSensor;
+import edu.colorado.phet.common.piccolophet.nodes.SpeedometerSensorNode;
+import edu.colorado.phet.common.piccolophet.nodes.kit.ZeroOffsetNode;
 import edu.colorado.phet.fluidpressureandflow.common.model.PressureSensor;
 import edu.colorado.phet.fluidpressureandflow.common.model.units.Unit;
 import edu.colorado.phet.fluidpressureandflow.common.model.units.UnitSet;
 import edu.colorado.phet.fluidpressureandflow.pressure.model.IPool;
-import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PText;
 
-import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Images.*;
 import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Strings.QUESTION_MARK;
 import static edu.colorado.phet.fluidpressureandflow.FluidPressureAndFlowResources.Strings.VALUE_WITH_UNITS_PATTERN;
 import static java.text.MessageFormat.format;
@@ -43,32 +49,39 @@ public class PressureSensorNode extends SensorNode {
         super( transform, sensor, getPressureUnit( units ) );
         this.pool = pool;
 
-        addChild( new PNode() {{
+        final PointSensor<Double> pointSensor = new PointSensor<Double>( 0, 0 );
+        final ZeroOffsetNode speedometerNode = new ZeroOffsetNode( new SpeedometerSensorNode( transform, pointSensor, "pressure", 131146 ) ) {{
 
-            final ThreeImageNode imageNode = new ThreeImageNode( PRESSURE_METER_LEFT, PRESSURE_METER_CENTER, PRESSURE_METER_RIGHT );
-            addChild( imageNode );
+            //make the hot spot at the bottom center
+            translate( -getFullWidth() / 2, -getFullBounds().getHeight() );
+        }};
+        addChild( speedometerNode );
 
-            final PText textNode = new PText( text.get() ) {{
-                setFont( new PhetFont( 20, true ) );
-            }};
-            addChild( textNode );
+        final PText textNode = new PText( text.get() ) {{
+            setFont( new PhetFont( 16, true ) );
+        }};
 
-            //Layout based on the size of the text string
-            text.addObserver( new SimpleObserver() {
-                public void update() {
-                    //Update the text itself.
-                    textNode.setText( text.get() );
+        final PhetPPath textOutline = new PhetPPath( Color.white, new BasicStroke( 1 ), Color.lightGray );
+        addChild( textOutline );
+        addChild( textNode );
 
-                    imageNode.setCenterWidth( textNode.getFullBounds().getWidth() );
+        sensor.addValueObserver( new SimpleObserver() {
+            @Override public void update() {
+                Option<Double> value = new Some<Double>( sensor.getValue() );
+                pointSensor.value.set( value );
+            }
+        } );
 
-                    //Position the text node just to the right of the leftPatch and centered vertically.
-                    textNode.setOffset( imageNode.leftPatch.getFullBounds().getMaxX(), imageNode.centerPatch.getFullBounds().getHeight() / 2 - textNode.getFullBounds().getHeight() / 2 );
-                }
-            } );
+        //Layout based on the size of the text string
+        text.addObserver( new SimpleObserver() {
+            public void update() {
+                //Update the text itself.
+                textNode.setText( text.get() );
+                textNode.centerBoundsOnPoint( speedometerNode.getCenterX(), speedometerNode.getCenterY() + 30 );
+                textOutline.setPathTo( RectangleUtils.expand( textNode.getFullBounds(), 2, 0 ) );
+            }
+        } );
 
-            //make its hot spot be its opening which is on its center left
-            translate( 0, -getFullBounds().getHeight() / 2 );
-        }} );
         addInputEventListener( new RelativeDragHandler( this, transform, sensor.location, new Function1<Point2D, Point2D>() {
             public Point2D apply( Point2D point2D ) {
                 Point2D pt = point2D;
