@@ -50,10 +50,10 @@ public class DensitySensorNode3D extends PlanarPiccoloNode implements DraggableT
         getCanvas().setCursor( Cursor.getPredefinedCursor( Cursor.HAND_CURSOR ) );
 
         model.modelChanged.addUpdateListener( new UpdateListener() {
-                                                  public void update() {
-                                                      updateReadout();
-                                                  }
-                                              }, true );
+            public void update() {
+                updateReadout();
+            }
+        }, true );
 
         updateOnEvent( tab.beforeFrameRender );
     }
@@ -115,7 +115,7 @@ public class DensitySensorNode3D extends PlanarPiccoloNode implements DraggableT
          *                     model-view-transform size changes.
          */
         public DensitySensorNode2D( float kmToViewUnit, PlateTectonicsTab tab ) {
-            super( ModelViewTransform.createIdentity(), new PointSensor<Double>( 0, 0 ), "Density (kg/m^3)" );
+            super( ModelViewTransform.createIdentity(), new PointSensor<Double>( 0, 0 ), "Density", 3500 );
 
             // scale it so that we achieve adherence to the model scale
             scale( ThermometerNode3D.PICCOLO_PIXELS_TO_VIEW_UNIT * kmToViewUnit / ThermometerNode3D.PIXEL_SCALE );
